--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
  │   │   ├── SocialLogin.jsx
  │   │   ├── BackgroundImage.jsx
  │   │   ├── Footer.jsx
+ |   |--/routes
+ |   |   |__ MainPage.jsx
  │   ├── App.jsx
  │   ├── index.js
  │   ├── styles.css
